.vscode/allianceuat_compare/force-app/main/default/objects/Bulk_Approval__c/Bulk_Approval__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Used for Bulk Approving Document Submissions</description>
    <label>Bulk Approval</label>
</CustomObject>