.vscode/allianceuat_compare/force-app/main/default/objects/Bulk_Approval__c/fields/Branch_Name__c.field-meta.xml
<CustomField>
    <fullName>Branch_Name__c</fullName>
    <label>Branch Name</label>
    <type>TextArea</type>
</CustomField>