.vscode/allianceuat_compare/force-app/main/default/objects/Bulk_Approval__c/fields/Candidate_Classification__c.field-meta.xml
<CustomField>
    <fullName>Candidate_Classification__c</fullName>
    <label>Candidate Classification</label>
    <type>TextArea</type>
</CustomField>