.vscode/allianceuat_compare/force-app/main/default/objects/Bulk_Approval__c/fields/Filter_Type__c.field-meta.xml
<CustomField>
    <fullName>Filter_Type__c</fullName>
    <defaultValue>&quot;All&quot;</defaultValue>
    <label>Filter Type</label>
    <type>TextArea</type>
</CustomField>