.vscode/allianceuat_compare/force-app/main/default/objects/Bulk_Approval__c/fields/Show_Filters__c.field-meta.xml
<CustomField>
    <fullName>Show_Filters__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show Filters</label>
    <type>Checkbox</type>
</CustomField>